# tinyfish_accelerator

./: .env.example  .gitignore  PLAN.md  PROGRESS.md  README.md  output.html  pyproject.toml  questionnaire.html  vercel.json
data/: company_urls.json  questionnaire.md  voting_history.md
extension/: adapter.js  autofill.js  background.js  content.js  decision-stub.js  history.js  injector.js  keys.js  manifest.json  options.css  options.html  options.js  popup.html  popup.js  questionnaire.html  questionnaire.js  report.css  report.html  report.js  styles.css  ui.css
src/: agent.py  discover.py  display.py  llm.py  main.py  profile_generator.py  scraper.py  summarizer.py
web/: README.md  package-lock.json  package.json
web/pages/: index.js
web/pages/api/: send.js
web/styles/: globals.css
