[project]
name = "proxy-voting-assistant"
version = "0.1.0"
description = "AI-powered proxy voting assistant for retail investors"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
vote = "src.main:main"
